updated translation en and 6 locales

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -201,5 +201,73 @@
   "aboutUs": "About Us",
   "writingResources": "Writing Resources",
   "termsOfService": "Terms of Service",
-  "contact": "Contact"
+  "contact": "Contact",
+  "cookiePolicy": "Cookie Policy",
+  "lastUpdated": "Last Updated",
+  "whatAreCookies": "What Are Cookies?",
+  "cookiesDefinition": "Cookies are small text files that are stored on your device when you visit a website. They are widely used to make websites work more efficiently and to provide information to the site owners.",
+  "howWeUseCookies": "How We Use Cookies",
+  "cookieUsageInfo": "We use cookies for a variety of reasons, including to enhance your user experience, analyze site traffic, and for marketing purposes.",
+  "essentialCookies": "Essential Cookies",
+  "functionalityCookies": "Functionality Cookies",
+  "functionalityCookiesDescription": "These cookies allow the website to remember choices you have made in the past, like what language you prefer.",
+  "performanceCookies": "Performance Cookies",
+  "analyticsCookies": "Analytics Cookies",
+  "analyticsCookiesDescription": "These cookies collect information about how you use a website, like which pages you visited and which links you clicked on. None of this information can be used to identify you. It is all aggregated and, therefore, anonymized.",
+  "marketingCookies": "Marketing Cookies",
+  "advertisingCookies": "Advertising Cookies",
+  "advertisingCookiesDescription": "These cookies track your online activity to help advertisers deliver more relevant advertising or to limit how many times you see an ad.",
+  "thirdPartyCookies": "Third-Party Cookies",
+  "thirdPartyCookiesInfo": "Some of our pages may display content from external providers, e.g., YouTube, Facebook and Twitter. To view this third-party content, you first have to accept their specific terms and conditions. This includes their cookie policies, which we have no control over.",
+  "googleAnalytics": "Google Analytics",
+  "googleAnalyticsDescription": "We use Google Analytics to collect information about how visitors use our website. We use this information to compile reports and to help us improve the site.",
+  "googleAdSense": "Google AdSense",
+  "googleAdSenseDescription": "We use Google AdSense to display ads on our website. This service uses cookies to serve ads based on a user's prior visits to our website or other websites.",
+  "managingCookies": "Managing Cookies",
+  "managingCookiesInfo": "You can manage your cookie preferences through our cookie consent tool or by adjusting your browser settings.",
+  "browserSettings": "Browser Settings",
+  "browserSettingsInfo": "Most web browsers allow some control of most cookies through the browser settings. To find out more about cookies, including how to see what cookies have been set, visit www.aboutcookies.org or www.allaboutcookies.org.",
+  "ourCookieConsentTool": "Our Cookie Consent Tool",
+  "cookieConsentToolInfo": "You can adjust your cookie preferences at any time by clicking on the cookie icon at the bottom of the screen.",
+  "acceptAllCookies": "Accept all cookies",
+  "rejectAllNonEssentialCookies": "Reject all non-essential cookies",
+  "customizeCookiePreferences": "Customize your cookie preferences",
+  "accessCookieTool": "You can access the cookie consent tool at any time to change your preferences or withdraw your consent.",
+  "changesToCookiePolicy": "Changes to This Cookie Policy",
+  "changesToCookiePolicyInfo": "We may update our Cookie Policy from time to time. We will notify you of any changes by posting the new Cookie Policy on this page.",
+  "cookiePolicyTitle": "Cookie Policy",
+  "cookiePolicyDescription": "Learn about how we use cookies and how you can manage them.",
+  "gdprCompliance": "GDPR Compliance",
+  "gdprComplianceInfo": "We are committed to complying with the General Data Protection Regulation (GDPR). As we do not collect any personal data, our practices are designed to protect your privacy.",
+  "lawfulnessFairnessTransparency": "Lawfulness, Fairness, and Transparency",
+  "weProcessNoPersonalData": "We process no personal data, ensuring fairness and transparency.",
+  "purposeLimitation": "Purpose Limitation",
+  "weCollectNoData": "We collect no data, so there is no purpose limitation to consider.",
+  "dataMinimization": "Data Minimization",
+  "weCollectZeroPersonalData": "We collect zero personal data, adhering to the principle of data minimization.",
+  "storageLimitation": "Storage Limitation",
+  "weStoreNoPersonalData": "We store no personal data, so there are no storage limitations.",
+  "integrityConfidentiality": "Integrity and Confidentiality",
+  "yourDataStaysBrowser": "Your data stays in your browser. We do not transmit or store it.",
+  "accountability": "Accountability",
+  "weDocumentPrivacyPractices": "We document our privacy practices and are accountable for them.",
+  "gdprArticle17": "Under GDPR, you have the right to request the erasure of your personal data. Since we do not collect any personal data, this right is not applicable.",
+  "ccpaCompliance": "CCPA Compliance",
+  "ccpaComplianceInfo": "We comply with the California Consumer Privacy Act (CCPA). As we do not collect any personal information, your rights under CCPA are not applicable.",
+  "noticeAtCollection": "Notice at Collection",
+  "thisPrivacyPolicyInforms": "This Privacy Policy informs you about our data practices at or before the point of collection.",
+  "rightToKnow": "Right to Know",
+  "youCanRequestInformation": "You can request information about the categories and specific pieces of personal information we have collected about you. Since we collect no personal information, we have nothing to disclose.",
+  "rightToDelete": "Right to Delete",
+  "youCanRequestDeletion": "You can request the deletion of your personal information. Since we do not collect any personal information, there is nothing to delete.",
+  "rightToOptOut": "Right to Opt-Out",
+  "youCanOptOut": "You can opt-out of the sale of your personal information. We do not sell any personal information.",
+  "childrensPrivacy": "Children's Privacy",
+  "childrensPrivacyInfo": "Our service does not address anyone under the age of 13. We do not knowingly collect personal identifiable information from children under 13.",
+  "internationalDataTransfers": "International Data Transfers",
+  "internationalDataTransfersInfo": "Your information, including personal data, may be transferred to — and maintained on — computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction. Since we do not collect any data, this is not applicable.",
+  "advertisingDisclosure": "Advertising Disclosure",
+  "advertisingDisclosureInfo": "This site is supported by advertisers. We may earn a commission when you purchase products or services through our links.",
+  "usersMayOptOut": "Users may opt out of personalized advertising by visiting Ads Settings. Alternatively, you can opt out of a third-party vendor's use of cookies for personalized advertising by visiting www.aboutads.info.",
+  "thirdPartyServicesInfo": "Our Service may contain links to other sites that are not operated by us. If you click on a third party link, you will be directed to that third party's site. We strongly advise you to review the Privacy Policy of every site you visit."
 }
