--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -115,11 +115,7 @@
   "useHeadingsParagraphs": "Use encabezados y párrafos para mejorar la capacidad de exploración",
   "freeWordCounterTool": "Herramienta Gratuita de Contador de Palabras",
   "aboutOurService": "Acerca de Nuestro Servicio",
-  "contactUs": "Contáctenos",
-  "termsOfService": "Términos de Servicio",
   "writingResources": "Recursos de Escritura",
-  "aboutUs": "Sobre Nosotros",
-  "privacyPolicy": "Política de Privacidad",
   "wordCounterGuide": "Guía de Contador de Palabras: Consejos de Escritura y Recursos de Análisis de Texto",
   "completeGuideDescription": "Guía completa sobre el uso de contadores de palabras y herramientas de análisis de texto. Aprenda técnicas de escritura, mejores prácticas de SEO y cómo optimizar contenido con nuestras herramientas en línea gratuitas.",
   "textAnalysisMadeSimple": "Análisis de Texto Simplificado",
@@ -179,11 +175,83 @@
     "rejectAll": "Rechazar Todo"
   },
   "cookies": "Cookies",
-  "english": "English",
+  "english": "Inglés",
   "spanish": "Español",
-  "french": "Français",
-  "hindi": "हिन्दी",
-  "german": "Deutsch",
-  "japanese": "日本語",
-  "chinese": "中文"
+  "french": "Francés",
+  "hindi": "Hindi",
+  "german": "Alemán",
+  "japanese": "Japonés",
+  "chinese": "Chino",
+  "metaDescription": "Herramienta gratuita de contador de palabras en línea. Cuenta palabras, caracteres, oraciones, párrafos, tiempo de lectura y densidad de palabras clave. Análisis de texto rápido y preciso para estudiantes, escritores y profesionales.",
+  "metaTitle": "Contador de palabras gratuito en línea - Cuenta palabras, caracteres, oraciones.",
+  "resources": "Recursos",
+  "support": "Contacta con el soporte de nuestra herramienta gratuita de contador de palabras.",
+  "cookiePolicy": "Política de Cookies",
+  "lastUpdated": "Última actualización",
+  "whatAreCookies": "¿Qué son las cookies?",
+  "cookiesDefinition": "Las cookies son pequeños archivos de texto que se almacenan en tu dispositivo cuando visitas un sitio web. Se utilizan ampliamente para que los sitios web funcionen de manera más eficiente y para proporcionar información a los propietarios del sitio.",
+  "howWeUseCookies": "Cómo utilizamos las cookies",
+  "cookieUsageInfo": "Utilizamos cookies por diversas razones, incluyendo mejorar tu experiencia de usuario, analizar el tráfico del sitio y con fines de marketing.",
+  "essentialCookies": "Cookies estrictamente necesarias",
+  "functionalityCookies": "Cookies de funcionalidad",
+  "functionalityCookiesDescription": "Estas cookies permiten que el sitio web recuerde las elecciones que has hecho en el pasado, como el idioma que prefieres.",
+  "performanceCookies": "Cookies de rendimiento",
+  "analyticsCookies": "Cookies analíticas",
+  "analyticsCookiesDescription": "Estas cookies recopilan información sobre cómo utilizas un sitio web, como las páginas que visitaste y los enlaces en los que hiciste clic. Ninguna de esta información puede utilizarse para identificarte. Toda ella se agrega y, por lo tanto, se anonimiza.",
+  "marketingCookies": "Cookies de marketing",
+  "advertisingCookies": "Cookies de publicidad",
+  "advertisingCookiesDescription": "Estas cookies rastrean tu actividad en línea para ayudar a los anunciantes a ofrecer publicidad más relevante o para limitar la cantidad de veces que ves un anuncio.",
+  "thirdPartyCookies": "Cookies de terceros",
+  "thirdPartyCookiesInfo": "Algunas de nuestras páginas pueden mostrar contenido de proveedores externos, por ejemplo, YouTube, Facebook y Twitter. Para ver este contenido de terceros, primero debes aceptar sus términos y condiciones específicos. Esto incluye sus políticas de cookies, sobre las cuales no tenemos control.",
+  "googleAnalytics": "Google Analytics",
+  "googleAnalyticsDescription": "Utilizamos Google Analytics para recopilar información sobre cómo los visitantes usan nuestro sitio web. Usamos esta información para compilar informes y ayudarnos a mejorar el sitio.",
+  "googleAdSense": "Google AdSense",
+  "googleAdSenseDescription": "Utilizamos Google AdSense para mostrar anuncios en nuestro sitio web. Este servicio utiliza cookies para publicar anuncios basados en las visitas anteriores de un usuario a nuestro sitio web u otros sitios web.",
+  "managingCookies": "Gestión de cookies",
+  "managingCookiesInfo": "Puedes gestionar tus preferencias de cookies a través de nuestra herramienta de consentimiento de cookies o ajustando la configuración de tu navegador.",
+  "browserSettings": "Configuración del navegador",
+  "browserSettingsInfo": "La mayoría de los navegadores web permiten cierto control sobre la mayoría de las cookies a través de la configuración del navegador. Para obtener más información sobre las cookies, incluyendo cómo ver qué cookies se han establecido, visita www.aboutcookies.org o www.allaboutcookies.org.",
+  "ourCookieConsentTool": "Nuestra herramienta de consentimiento de cookies",
+  "cookieConsentToolInfo": "Puedes ajustar tus preferencias de cookies en cualquier momento haciendo clic en el icono de cookies en la parte inferior de la pantalla.",
+  "acceptAllCookies": "Aceptar todas las cookies",
+  "rejectAllNonEssentialCookies": "Rechazar todas las cookies no esenciales",
+  "customizeCookiePreferences": "Personalizar tus preferencias de cookies",
+  "accessCookieTool": "Puedes acceder a la herramienta de consentimiento de cookies en cualquier momento para cambiar tus preferencias o retirar tu consentimiento.",
+  "changesToCookiePolicy": "Cambios en esta Política de Cookies",
+  "changesToCookiePolicyInfo": "Podemos actualizar nuestra Política de Cookies de vez en cuando. Te notificaremos cualquier cambio publicando la nueva Política de Cookies en esta página.",
+  "cookiePolicyTitle": "Política de Cookies",
+  "cookiePolicyDescription": "Aprende cómo utilizamos las cookies y cómo puedes gestionarlas.",
+  "gdprCompliance": "Cumplimiento del RGPD",
+  "gdprComplianceInfo": "Estamos comprometidos a cumplir con el Reglamento General de Protección de Datos (RGPD). Dado que no recopilamos ningún dato personal, nuestras prácticas están diseñadas para proteger su privacidad.",
+  "lawfulnessFairnessTransparency": "Licitud, Lealtad y Transparencia",
+  "weProcessNoPersonalData": "No procesamos datos personales, garantizando la lealtad y la transparencia.",
+  "purposeLimitation": "Limitación de la Finalidad",
+  "weCollectNoData": "No recopilamos datos, por lo que no hay limitación de la finalidad que considerar.",
+  "dataMinimization": "Minimización de Datos",
+  "weCollectZeroPersonalData": "Recopilamos cero datos personales, adhiriéndonos al principio de minimización de datos.",
+  "storageLimitation": "Limitación del Plazo de Conservación",
+  "weStoreNoPersonalData": "No almacenamos datos personales, por lo que no hay limitaciones de almacenamiento.",
+  "integrityConfidentiality": "Integridad y Confidencialidad",
+  "yourDataStaysBrowser": "Sus datos permanecen en su navegador. No los transmitimos ni los almacenamos.",
+  "accountability": "Responsabilidad",
+  "weDocumentPrivacyPractices": "Documentamos nuestras prácticas de privacidad y somos responsables de ellas.",
+  "gdprArticle17": "Según el RGPD, usted tiene derecho a solicitar la supresión de sus datos personales. Dado que no recopilamos ningún dato personal, este derecho no es aplicable.",
+  "ccpaCompliance": "Cumplimiento de la CCPA",
+  "ccpaComplianceInfo": "Cumplimos con la Ley de Privacidad del Consumidor de California (CCPA). Dado que no recopilamos ninguna información personal, sus derechos bajo la CCPA no son aplicables.",
+  "noticeAtCollection": "Aviso en la Recopilación",
+  "thisPrivacyPolicyInforms": "Esta Política de Privacidad le informa sobre nuestras prácticas de datos en el momento o antes de la recopilación.",
+  "rightToKnow": "Derecho a Saber",
+  "youCanRequestInformation": "Puede solicitar información sobre las categorías y los datos específicos de información personal que hemos recopilado sobre usted. Dado que no recopilamos información personal, no tenemos nada que revelar.",
+  "rightToDelete": "Derecho de Supresión",
+  "youCanRequestDeletion": "Puede solicitar la eliminación de su información personal. Dado que no recopilamos ninguna información personal, no hay nada que eliminar.",
+  "rightToOptOut": "Derecho de Exclusión Voluntaria",
+  "youCanOptOut": "Puede optar por no participar en la venta de su información personal. No vendemos ninguna información personal.",
+  "childrensPrivacy": "Privacidad de los Niños",
+  "childrensPrivacyInfo": "Nuestro servicio no está dirigido a personas menores de 13 años. No recopilamos a sabiendas información de identificación personal de niños menores de 13 años.",
+  "internationalDataTransfers": "Transferencias Internacionales de Datos",
+  "internationalDataTransfersInfo": "Su información, incluidos los datos personales, puede ser transferida y mantenida en computadoras ubicadas fuera de su estado, provincia, país u otra jurisdicción gubernamental where the data protection laws may differ than those from your jurisdiction. Dado que no recopilamos ningún dato, esto no es aplicable.",
+  "advertisingDisclosure": "Divulgación de Publicidad",
+  "advertisingDisclosureInfo": "Este sitio está respaldado por anunciantes. Podemos ganar una comisión cuando compra productos o servicios a través de nuestros enlaces.",
+  "usersMayOptOut": "Los usuarios pueden optar por no recibir publicidad personalizada visitando la Configuración de Anuncios. Alternativamente, puede optar por que un proveedor externo no utilice cookies para publicidad personalizada visitando www.aboutads.info.",
+  "thirdPartyServicesInfo": "Nuestro Servicio puede contener enlaces a otros sitios que no son operados por nosotros. Si hace clic en un enlace de terceros, será dirigido al sitio de ese tercero. Le recomendamos encarecidamente que revise la Política de Privacidad de cada sitio que visite."
 }
