--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -1,73 +1,257 @@
-
 {
-    "wordCounter": "単語カウンター",
-    "characterCount": "文字数",
-    "wordCount": "単語数",
-    "sentenceCount": "文の数",
-    "paragraphCount": "段落数",
-    "readingTime": "読書時間",
-    "keywordDensity": "キーワード密度",
-    "clearText": "テキストをクリア",
-    "howToUse": "使い方",
-    "howToUseText": "上のテキストエリアにテキストを入力するか貼り付けるだけで、すぐに分析が開始されます。単語数、文字数、その他の指標はリアルタイムで更新されます。また、ライトモードとダークモードを切り替えたり、インターフェースの言語を変更したりすることもできます。",
-    "about": "私たちについて",
-    "aboutText": "この単語カウンターアプリケーションは、テキストを分析するためのシンプルで強力なツールです。文章をよりよく理解するのに役立つさまざまな指標を提供します。学生、作家、専門家など、このツールはあなたの文章を改善し、目標を達成するのに役立ちます。",
-    "contactUs": "お問い合わせ",
-    "contactText": "ご質問、ご意見、ご提案がございましたら、お気軽にお問い合わせください。ご連絡をお待ちしております！",
-    "nameLabel": "名前",
-    "emailLabel": "Eメール",
-    "messageLabel": "メッセージ",
-    "submitButton": "送信",
-    "cookieConsent": {
-        "bannerText": "当社は、ご利用体験の向上、トラフィック分析、およびパーソナライズ広告表示のためにクッキーを使用しています。当ウェブサイトを引き続き使用することにより、クッキーの使用について当社のクッキーポリシーに従って同意されたものとみなされます。",
-        "acceptAll": "すべてを受け入れる",
-        "customize": "カスタマイズ",
-        "rejectAll": "すべてを拒否",
-        "learnMore": "詳細情報"
-    },
-    "consentManagement": {
-        "title": "クッキー設定",
-        "description": "以下でさまざまな種類のクッキーに関する同意設定を管理してください。基本的な機能を確保するために、必要なクッキーは常に有効になっています。",
-        "necessary": "必要なクッキー",
-        "necessaryDescription": "これらのクッキーは、ウェブサイトを正しく機能させるために不可欠であり、オフにすることはできません。通常、これらはサービスのリクエスト（プライバシー設定の設定、ログイン、またはフォームへの記入など）を構成するお客様が行った操作に応じて設定されます。",
-        "analytics": "分析クッキー",
-        "analyticsDescription": "これらのクッキーを使用すると、当社は訪問数とトラフィックソースをカウントして、サイトのパフォーマンスを測定および向上させることができます。これらは、どのページが最も人気で、どれが最も人気がないかを把握し、訪問者がサイト内でどのように移動しているかを確認するのに役立ちます。",
-        "advertising": "広告クッキー",
-        "advertisingDescription": "これらのクッキーは、当社の広告パートナーが当社サイト経由で設定する可能性があり、関連性のある広告を表示するための関心対象プロファイル構築に使用されます。これらは直接個人情報を保存しませんが、ブラウザとインターネットデバイスを一意に識別することに基づいています。",
-        "rejectAll": "すべてを拒否",
-        "acceptAll": "すべてを受け入れる",
-        "savePreferences": "設定を保存"
-    },
-    "privacyPolicy": "プライバシーポリシー",
-    "privacyPolicyTitle": "プライバシーポリシー - 単語カウンターツール",
-    "privacyPolicyDescription": "当社の無料単語カウンターツールをご使用になる際の情報の収集、使用、保護方法について。",
-    "effectiveDate": "発効日",
-    "section1Title": "当社が収集する情報",
-    "noPersonalInformation": "当ウェブサイトをご利用する際、当社はお客様に関する個人を特定できる情報を一切収集しません。単語カウンターツールはすべてウェブブラウザ内で完全に動作し、すべての処理はローカルデバイス上で行われます。",
-    "section2Title": "情報の使用方法",
-    "sinceNoInformation": "当社は個人情報を収集しないため、お客様に関する個人情報を一切使用しません。",
-    "dataSecurity": "データセキュリティ",
-    "dataSecurityInfo": "テキストデータはブラウザ内に留まり、当社サーバーや第三者に送信されることはありません。当社の単語カウンターツールをご使用になる際、テキストはローカルデバイス内に留まり、どこにも保存されません。",
-    "thirdPartyServices": "サードパーティーサービス",
-    "thirdPartyInfo": "Google AnalyticsやGoogle AdSenseなどのサードパーティーサービスを使用する場合があります。これらのサービスは、お客様の当社ウェブサイトの使用状況に関する情報を収集し、Cookieを使用して複数のウェブサイトにわたるオンライン活動を追跡する可能性があります。",
-    "cookiesInfo": "多くのウェブサイトと同様に、当社は当サイトの活動を追跡し、特定の情報を保存するためにCookieおよび類似のトラッキング技術を使用します。当ウェブサイトは、基本的、分析的、および広告目的を含むさまざまな目的でCookieを使用します。",
-    "changesToPolicy": "このプライバシーポリシーへの変更",
-    "changesInfo": "当社は、プライバシーポリシーを随時更新することがあります。変更がある場合は、このページに新しいプライバシーポリシーを掲載し、ページ上部の発効日を更新して通知します。",
-    "contactUs": "お問い合わせ",
-    "contactForQuestions": "このプライバシーポリシーについてご質問がある場合は、当社の",
-    "page": "ページ",
-    "navigateOurSite": "当サイトをナビゲート",
-    "freeWordCounterTool": "無料単語カウンターツール",
-    "aboutUs": "私たちについて",
-    "writingResources": "執筆リソース",
-    "termsOfService": "利用規約",
-    "contact": "お問い合わせ",
-    "cookies": "クッキー",
-    "english": "English",
-    "spanish": "Español",
-    "french": "Français",
-    "hindi": "हिन्दी",
-    "german": "Deutsch",
-    "japanese": "日本語",
-    "chinese": "中文"
+  "title": "ワードカウンター",
+  "placeholder": "ここにテキストを入力または貼り付けてください...",
+  "clearText": "テキストをクリア",
+  "exportTxt": "TXT形式でエクスポート",
+  "words": "単語",
+  "characters": "文字",
+  "sentences": "文",
+  "paragraphs": "段落",
+  "readingTime": "読了時間（分）",
+  "keywordDensity": "キーワード密度",
+  "aboutUs": "私たちについて",
+  "aboutText": "これはReactとMaterial-UIで構築されたシンプルなワードカウンターアプリケーションです。",
+  "contactUs": "お問い合わせ",
+  "contactText": "ご質問やフィードバックはありますか？ 下記のフォームに記入してお問い合わせください。",
+  "nameLabel": "名前",
+  "emailLabel": "メール",
+  "messageLabel": "メッセージ",
+  "submitButton": "送信",
+  "wordCounter": "ワードカウンター",
+  "about": "概要",
+  "contact": "連絡先",
+  "resources": "リソース",
+  "privacyPolicy": "プライバシーポリシー",
+  "termsOfService": "利用規約",
+  "howToUse": {
+    "title": "使用方法",
+    "step1": "テキスト領域にテキストを貼り付けてください。",
+    "step2": "単語数、文字数などに関する情報を即座に取得します。",
+    "step3": "テキストを.txtファイルとしてエクスポートします。",
+    "step4": "もう一度最初から開始するにはテキスト領域をクリアします。"
+  },
+  "freeWordCounterOnline": "無料オンラインワードカウンター - 単語数、文字数、文数をカウント",
+  "freeWordCounterDescription": "無料のオンラインワードカウンターツール。単語数、文字数、文数、段落数、読了時間、キーワード密度をカウントします。学生、作家、プロフェッショナルのための迅速で正確なテキスト分析。",
+  "bestFreeTool": "単語数、文字数、文数、段落数、読了時間、キーワード密度をカウントするための最高の無料オンラインツール。",
+  "writingTips": "執筆のヒント",
+  "seoContentOptimization": "SEOコンテンツ最適化",
+  "textAnalysisTechniques": "テキスト分析技術",
+  "aboutOurTool": "私たちのツールについて",
+  "learnMoreAboutTextAnalysis": "テキスト分析について詳しく知る",
+  "relatedResources": "関連リソース",
+  "learnMore": "詳細",
+  "useOurTool": "当社のツールを使用する",
+  "writingGuides": "執筆ガイド",
+  "exploreOurToolsResources": "当社のツールとリソースを探索する",
+  "navigateOurSite": "当サイトをナビゲート",
+  "exploreOurWebsite": "当社のウェブサイトを探索",
+  "completeGuide": "ワードカウンターとテキスト分析の完全ガイド",
+  "professionalWritingTips": "プロの執筆ヒント、テキスト分析技術、コンテンツ最適化戦略。",
+  "importanceOfWordCount": "執筆における語数の重要性",
+  "wordCountInfo": "学術論文、ブログ投稿、プロフェッショナルなドキュメントを書く場合でも、語数を理解することは重要です。異なる文脈では異なる長さが必要です。",
+  "blogPosts": "ブログ投稿",
+  "blogPostsInfo": "最適なSEOのために通常1,000語から2,500語の範囲で書かれます",
+  "academicPapers": "学術論文",
+  "academicPapersInfo": "多くの場合、機関によって設定された厳格な語数制限があります",
+  "socialMedia": "ソーシャルメディア",
+  "socialMediaInfo": "Twitterには280文字の制限があり、LinkedInの投稿は1,300語までが適切に機能します",
+  "emails": "電子メール",
+  "emailsInfo": "簡潔に保ち、より良いエンゲージメントのために理想的には200語未満にしてください",
+  "howToUseWordCounter": "ワードカウンターを効果的に使用する方法",
+  "wordCounterUtility": "ワードカウンターは単なるカウントツール以上です。その有用性を最大限に引き出す方法は以下の通りです。",
+  "planYourContent": "コンテンツを計画する",
+  "setWordTargets": "執筆を始める前に語数目標を設定する",
+  "checkLengthRequirements": "長さの要件を確認する",
+  "ensureContentMeetsGuidelines": "あなたのコンテンツが提出ガイドラインを満たしていることを確認する",
+  "analyzeReadingTime": "読了時間を分析する",
+  "knowHowLongContentTakes": "コンテンツを読むのにどれくらい時間がかかるか知る",
+  "optimizeForSeo": "SEOの最適化",
+  "meetRecommendedWordCounts": "検索エンジンの推奨語数を満たす",
+  "trackProgress": "進捗を追跡する",
+  "monitorWritingPace": "執筆ペースと生産性を監視する",
+  "writingTipsBasedOnTextAnalysis": "テキスト分析に基づく執筆のヒント",
+  "textCompositionHelps": "テキストの構成を理解することは執筆を改善するのに役立ちます。",
+  "sentenceLength": "文の長さ",
+  "mixShortAndLong": "読みやすさのために短い文と長い文を混ぜる",
+  "paragraphStructure": "段落構造",
+  "aimForSentences": "スキャンしやすさのため、段落あたり3〜5文を目標にする",
+  "keywordDensity": "キーワード密度",
+  "keepItNatural": "自然なままでいる - SEO目的では通常1〜2%",
+  "readingLevel": "読解レベル",
+  "adjustForAudience": "ターゲットオーディエンスに応じて複雑さを調整する",
+  "textAnalysisForContentTypes": "コンテンツタイプ別のテキスト分析",
+  "academicWriting": "学術的な執筆",
+  "academicWritingInfo": "適切な語数制限を維持し、冗長性をチェックし、一貫した用語を確保することに焦点を当てます。学術論文には多くの場合、特定の語数と構造が必要です。",
+  "blogArticles": "ブログ投稿と記事",
+  "blogArticlesInfo": "最適なSEOパフォーマンスのためには1,500〜2,500語を目標にします。キーワード密度と読了時間を確認して、コンテンツが実質的で魅力的であることを確認します。",
+  "businessDocuments": "ビジネス文書",
+  "businessDocumentsInfo": "ビジネスコミュニケーションを簡潔に保ちます。すべての必要な情報を伝えながらも、できるだけ簡潔に保つためにツールを使用してください。",
+  "bestPracticesForWriting": "効果的な執筆のための最良の慣行",
+  "implementingPractices": "これらの慣行を実施することは執筆の質を向上させます。",
+  "knowYourAudience": "オーディエンスを知る",
+  "tailorWordChoice": "適切な言葉選びとトーンを調整する",
+  "setClearObjectives": "明確な目標を設定する",
+  "definePurpose": "執筆の目的を最初に明確にする",
+  "useActiveVoice": "能動態を使用する",
+  "generallyMoreConcise": "一般的により簡潔で理解しやすい",
+  "editRuthlessly": "容赦なく編集する",
+  "removeRedundantWords": "冗長な言葉や句を削除する",
+  "reviewAndRefine": "レビューと洗練",
+  "checkMetricsBeforePublishing": "公開前に語数その他の指標を確認する",
+  "readingTimeAndEngagement": "読了時間とエンゲージメント",
+  "averageReadingTime": "平均読了時間は約200語/分です。これを理解することで期待値を設定できます。",
+  "quickRead": "簡単な読み物",
+  "quickReadTime": "2〜3分",
+  "mediumRead": "中程度の読み物",
+  "mediumReadTime": "3〜5分",
+  "inDepthRead": "詳細な読み物",
+  "inDepthReadTime": "5分以上",
+  "considerAudienceAttention": "エンゲージメントを最適化するために、コンテンツ作成時にオーディエンスの注意の持ち時間を考慮してください。",
+  "seoAndContentOptimization": "SEOとコンテンツ最適化",
+  "significantlyImproveContent": "テキスト分析ツールを使用することで、コンテンツのパフォーマンスを大幅に改善できます。",
+  "maintainSearchRankings": "検索ランキングを向上させるために1〜2%を維持する",
+  "targetWordCount": "詳細なトピックには1,500〜2,500語を目標にする",
+  "varySentenceLength": "読者の興味を保つために文の長さに変化をつける",
+  "useHeadingsParagraphs": "スキャン性を向上させるために見出しと段落を使用する",
+  "freeWordCounterTool": "無料ワードカウンターツール",
+  "aboutOurService": "当社のサービスについて",
+  "writingResources": "執筆リソース",
+  "wordCounterGuide": "ワードカウンターガイド: 執筆のヒントとテキスト分析リソース",
+  "completeGuideDescription": "ワードカウンターとテキスト分析ツールの使用に関する完全ガイド。執筆技術、SEOの最良の慣行、当社の無料オンラインツールでコンテンツを最適化する方法を学びましょう。",
+  "textAnalysisMadeSimple": "テキスト分析を簡単にする",
+  "accurateFastEasyToUse": "学生、作家、プロフェッショナルのための正確で迅速かつ使いやすいテキスト分析。語数、文字数などをカウント。",
+  "completelyFree": "このツールは完全に無料で使用でき、登録は必要ありません。フィールドにテキストを貼り付けるだけで即座に結果が得られます。",
+  "freeWordCounterSupport": "無料ワードカウンターツールサポートにお問い合わせ",
+  "supportForQuestions": "無料ワードカウンターツールに関する質問は、当社のサポートチームにお問い合わせください。テキスト分析、語数カウント、コンテンツ最適化に関するお問い合わせには、こちらで対応いたします。",
+  "questionsSuggestionsFeedback": "当社の無料ワードカウンターツールに関する質問、機能提案、体験に関するフィードバックなど、お気軽にお知らせください。",
+  "visitResourcesForHelp": "ワードカウンターの使用に関するお手伝いは、ガイドとヒントのためのリソースページをご覧ください。",
+  "allRightsReserved": "全著作権所有",
+  "privacyPolicyTitle": "プライバシーポリシー - 無料ワードカウンターツール",
+  "privacyPolicyDescription": "無料ワードカウンターツールに関するプライバシーポリシー。個人情報を収集せず、すべてのテキスト処理はローカルブラウザーで行われます。",
+  "noPersonalInformation": "当社のワードカウンターアプリケーションは、ユーザーから個人情報を収集しません。すべてのテキスト処理はローカルブラウザーで行われ、サーバーには送信されません。",
+  "sinceNoInformation": "個人情報を収集しないため、お客様の情報は一切使用しません。テキスト入力はブラウザー内に留まり、保存または送信されることはありません。",
+  "dataSecurity": "データセキュリティ",
+  "dataSecurityInfo": "当社は、お客様のプライバシーおよびデータセキュリティを優先しています。すべてのテキスト分析はローカルブラウザーで行われます。データは当社サーバーまたは第三者サービスに転送されることはありません。",
+  "thirdPartyServices": "第三者サービス",
+  "thirdPartyInfo": "このアプリケーションは、Google AnalyticsおよびGoogle AdSenseを含む第三者サービスを使用しています。これらのサービスは、それぞれのプライバシーポリシーに従って情報を収集する場合があります。",
+  "cookiesInfo": "当社のアプリケーションは、設定を保存しサイトのトラフィックを分析するためにクッキーを使用する場合があります。ブラウザ設定からクッキーを無効にすることを選択できます。",
+  "changesToPolicy": "このポリシーの変更",
+  "changesInfo": "当社は、プライバシーポリシーを随時更新することがあります。変更がある場合は、このページに新しいプライバシーポリシーを投稿して通知します。",
+  "contactForQuestions": "このプライバシーポリシーに関する質問がある場合は、お問い合わせページから当社までご連絡ください。",
+  "termsOfServiceTitle": "利用規約 - 無料ワードカウンターツール",
+  "termsDescription": "当社の無料ワードカウンターツールの利用規約。当社のサービスをご利用になることで、これらの利用条件および規約に同意されたものとみなされます。",
+  "agreementToTerms": "規約への同意",
+  "agreementInfo": "このワードカウンターアプリケーションへのアクセスおよび使用により、お客様はこれらの利用規約および当社のプライバシーポリシーに拘束されることに同意するものとします。",
+  "useLicense": "使用ライセンス",
+  "useLicenseInfo": "個人的、非商業的な一時的表示のために、アプリケーション上の資料の複製を一時的にダウンロードすることを許可します。",
+  "disclaimer": "免責事項",
+  "disclaimerInfo": "当社アプリケーション上の資料は「現状のまま」提供されます。当社は保証をいたしません。明示的または黙示的な保証、商品性、特定の目的への適合性、知的財産権の非侵害またはその他の権利侵害を含む、すべての保証を否認し、否定いたします。",
+  "limitations": "制限",
+  "limitationInfo": "当社または当社のサプライヤーは、アプリケーションの使用または使用不能から生じる損害（データまたは利益の損失、業務の中断による損害を含みますがこれらに限定されません）について一切責任を負いません。",
+  "accuracyOfMaterials": "資料の正確性",
+  "accuracyInfo": "このアプリケーションで提供されるテキスト分析ツールは一般情報の提供のみを目的としています。分析結果の完全性、正確性または信頼性を保証するものではありません。",
+  "changes": "変更",
+  "changesTermsInfo": "当社はこれらの条件をいつでも変更する権利を留保します。変更後のアプリケーションの継続的使用は、これらの変更の承諾を構成します。",
+  "contactInfo": "連絡先情報",
+  "contactInfoText": "これらの利用規約に関する質問がある場合は、お問い合わせページから当社までご連絡ください。",
+  "cookieConsent": {
+    "bannerText": "当社は、ご利用体験の向上、トラフィック分析、およびパーソナライズ広告表示のためにクッキーを使用しています。当ウェブサイトを引き続き使用することにより、クッキーの使用について当社のクッキーポリシーに従って同意されたものとみなされます。",
+    "acceptAll": "すべてを受け入れる",
+    "customize": "カスタマイズ",
+    "rejectAll": "すべてを拒否",
+    "learnMore": "詳細情報"
+  },
+  "consentManagement": {
+    "title": "クッキー設定",
+    "description": "以下でさまざまな種類のクッキーに関する同意設定を管理してください。基本的な機能を確保するために、必要なクッキーは常に有効になっています。",
+    "necessary": "必要なクッキー",
+    "necessaryDescription": "これらのクッキーは、ウェブサイトを正しく機能させるために不可欠であり、オフにすることはできません。通常、これらはサービスのリクエスト（プライバシー設定の設定、ログイン、またはフォームへの記入など）を構成するお客様が行った操作に応じて設定されます。",
+    "analytics": "分析クッキー",
+    "analyticsDescription": "これらのクッキーを使用すると、当社は訪問数とトラフィックソースをカウントして、サイトのパフォーマンスを測定および向上させることができます。これらは、どのページが最も人気で、どれが最も人気がないかを把握し、訪問者がサイト内でどのように移動しているかを確認するのに役立ちます。",
+    "advertising": "広告クッキー",
+    "advertisingDescription": "これらのクッキーは、当社の広告パートナーが当社サイト経由で設定する可能性があり、関連性のある広告を表示するための関心対象プロファイル構築に使用されます。これらは直接個人情報を保存しませんが、ブラウザとインターネットデバイスを一意に識別することに基づいています。",
+    "rejectAll": "すべてを拒否",
+    "acceptAll": "すべてを受け入れる",
+    "savePreferences": "設定を保存"
+  },
+  "cookies": "クッキー",
+  "english": "英語",
+  "spanish": "スペイン語",
+  "french": "フランス語",
+  "hindi": "ヒンディー語",
+  "german": "ドイツ語",
+  "japanese": "日本語",
+  "chinese": "中国語",
+  "metaDescription": "無料のオンラインワードカウンターツール。単語、文字、文、段落、読了時間、キーワード密度をカウントします。学生、作家、プロフェッショナルのための高速で正確なテキスト分析。",
+  "metaTitle": "無料のオンラインワードカウンター - 単語、文字、文をカウント",
+  "resources": "リソース",
+  "support": "無料ワードカウンターツールサポートにお問い合わせください",
+  "cookiePolicy": "クッキーポリシー",
+  "lastUpdated": "最終更新日",
+  "whatAreCookies": "クッキーとは？",
+  "cookiesDefinition": "クッキーとは、お客様がウェブサイトを訪問した際に、お客様のデバイスに保存される小さなテキストファイルです。これらは、ウェブサイトをより効率的に機能させ、サイト所有者に情報を提供するために広く使用されています。",
+  "howWeUseCookies": "クッキーの使用方法",
+  "cookieUsageInfo": "当社は、お客様のユーザーエクスペリエンスの向上、サイトトラフィックの分析、マーケティング目的など、さまざまな理由でクッキーを使用しています。",
+  "essentialCookies": "必須クッキー",
+  "functionalityCookies": "機能性クッキー",
+  "functionalityCookiesDescription": "これらのクッキーは、お客様が過去に行った選択（優先言語など）をウェブサイトが記憶することを可能にします。",
+  "performanceCookies": "パフォーマンスクッキー",
+  "analyticsCookies": "分析クッキー",
+  "analyticsCookiesDescription": "これらのクッキーは、お客様がウェブサイトをどのように利用したか（訪問したページやクリックしたリンクなど）に関する情報を収集します。これらの情報はいずれもお客様を特定するために使用されることはありません。すべて集計され、匿名化されています。",
+  "marketingCookies": "マーケティングクッキー",
+  "advertisingCookies": "広告クッキー",
+  "advertisingCookiesDescription": "これらのクッキーは、お客様のオンライン活動を追跡し、広告主がより関連性の高い広告を配信したり、お客様が広告を見る回数を制限したりするのに役立ちます。",
+  "thirdPartyCookies": "サードパーティクッキー",
+  "thirdPartyCookiesInfo": "当社の一部のページでは、YouTube、Facebook、Twitterなどの外部プロバイダーからのコンテンツが表示される場合があります。このサードパーティコンテンツを表示するには、まずそれらの特定の利用規約に同意する必要があります。これには、当社が管理できないクッキーポリシーも含まれます。",
+  "googleAnalytics": "Googleアナリティクス",
+  "googleAnalyticsDescription": "当社は、訪問者が当社のウェブサイトをどのように利用しているかに関する情報を収集するためにGoogleアナリティクスを使用しています。この情報は、レポートを作成し、サイトを改善するために使用しています。",
+  "googleAdSense": "Google AdSense",
+  "googleAdSenseDescription": "当社は、ウェブサイトに広告を表示するためにGoogle AdSenseを使用しています。このサービスは、ユーザーの当社のウェブサイトまたは他のウェブサイトへの過去の訪問に基づいて広告を配信するためにクッキーを使用します。",
+  "managingCookies": "クッキーの管理",
+  "managingCookiesInfo": "クッキーの設定は、当社のクッキー同意ツールまたはブラウザの設定で管理できます。",
+  "browserSettings": "ブラウザ設定",
+  "browserSettingsInfo": "ほとんどのウェブブラウザでは、ブラウザの設定を通じてほとんどのクッキーをある程度制御できます。設定されているクッキーの確認方法など、クッキーの詳細については、www.aboutcookies.org または www.allaboutcookies.org をご覧ください。",
+  "ourCookieConsentTool": "当社のクッキー同意ツール",
+  "cookieConsentToolInfo": "画面下部のクッキーアイコンをクリックすることで、いつでもクッキーの設定を調整できます。",
+  "acceptAllCookies": "すべてのクッキーを受け入れる",
+  "rejectAllNonEssentialCookies": "必須ではないすべてのクッキーを拒否する",
+  "customizeCookiePreferences": "クッキーの設定をカスタマイズする",
+  "accessCookieTool": "いつでもクッキー同意ツールにアクセスして、設定を変更したり、同意を撤回したりできます。",
+  "changesToCookiePolicy": "このクッキーポリシーの変更",
+  "changesToCookiePolicyInfo": "当社は、このクッキーポリシーを随時更新する場合があります。変更があった場合は、このページに新しいクッキーポリシーを掲載してお知らせします。",
+  "cookiePolicyTitle": "クッキーポリシー",
+  "cookiePolicyDescription": "当社がクッキーをどのように使用しているか、およびその管理方法について説明します。",
+  "gdprCompliance": "GDPR準拠",
+  "gdprComplianceInfo": "当社は一般データ保護規則（GDPR）の遵守に努めています。個人データを一切収集しないため、お客様のプライバシーを保護するように当社の慣行は設計されています。",
+  "lawfulnessFairnessTransparency": "適法性、公正性、透明性",
+  "weProcessNoPersonalData": "当社は個人データを一切処理せず、公正性と透明性を確保しています。",
+  "purposeLimitation": "目的制限",
+  "weCollectNoData": "当社はデータを一切収集しないため、考慮すべき目的制限はありません。",
+  "dataMinimization": "データ最小化",
+  "weCollectZeroPersonalData": "当社は個人データを一切収集せず、データ最小化の原則を遵守しています。",
+  "storageLimitation": "保存期間の制限",
+  "weStoreNoPersonalData": "当社は個人データを一切保存しないため、保存期間の制限はありません。",
+  "integrityConfidentiality": "正確性および機密性",
+  "yourDataStaysBrowser": "お客様のデータはブラウザに留まります。当社がそれを送信または保存することはありません。",
+  "accountability": "説明責任",
+  "weDocumentPrivacyPractices": "当社はプライバシー慣行を文書化し、それらについて説明責任を負います。",
+  "gdprArticle17": "GDPRに基づき、お客様には個人データの消去を要求する権利があります。当社は個人データを一切収集しないため、この権利は適用されません。",
+  "ccpaCompliance": "CCPA準拠",
+  "ccpaComplianceInfo": "当社はカリフォルニア州消費者プライバシー法（CCPA）を遵守しています。個人情報を一切収集しないため、CCPAに基づくお客様の権利は適用されません。",
+  "noticeAtCollection": "収集時の通知",
+  "thisPrivacyPolicyInforms": "このプライバシーポリシーは、データ収集時またはそれ以前における当社のデータ慣行についてお客様に通知するものです。",
+  "rightToKnow": "知る権利",
+  "youCanRequestInformation": "お客様は、当社が収集した個人情報の種類および特定の情報について開示を要求できます。当社は個人情報を一切収集しないため、開示する情報はありません。",
+  "rightToDelete": "削除する権利",
+  "youCanRequestDeletion": "お客様は個人情報の削除を要求できます。当社は個人情報を一切収集しないため、削除するものはありません。",
+  "rightToOptOut": "オプトアウトする権利",
+  "youCanOptOut": "お客様は個人情報の販売をオプトアウトできます。当社は個人情報を一切販売しません。",
+  "childrensPrivacy": "子どものプライバシー",
+  "childrensPrivacyInfo": "当社のサービスは13歳未満の方を対象としていません。当社は13歳未満の子どもから個人を特定できる情報を意図的に収集することはありません。",
+  "internationalDataTransfers": "国際データ転送",
+  "internationalDataTransfersInfo": "お客様の情報（個人データを含む）は、お客様の州、県、国、またはその他の政府管轄区域外に所在するコンピュータに転送され、そこで維持される場合があります。これらの場所では、データ保護法がお客様の管轄区域の法律と異なる場合があります。当社はデータを一切収集しないため、これは適用されません。",
+  "advertisingDisclosure": "広告表示について",
+  "advertisingDisclosureInfo": "このサイトは広告主によって支えられています。当サイトのリンクを通じて製品やサービスをご購入いただいた場合、コミッションを得る可能性があります。",
+  "usersMayOptOut": "ユーザーは広告設定にアクセスすることで、パーソナライズされた広告をオプトアウトできます。または、www.aboutads.info にアクセスすることで、第三者ベンダーによるパーソナライズされた広告のためのCookieの使用をオプトアウトできます。",
+  "thirdPartyServicesInfo": "当社のサービスには、当社が運営していない他のサイトへのリンクが含まれている場合があります。第三者のリンクをクリックすると、その第三者のサイトに移動します。訪問するすべてのサイトのプライバシーポリシーを確認することを強くお勧めします。"
 }
